--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Welcome to my Pinterested App</h1>
-<p>Pretty cool!</p>
-<p>Pretty cool!</p>
+<section class="p-5 mt-4 bg-light rounded-3">
+    <h1>Welcome to my Pinterested App</h1>
+    <p>Pretty cool!</p>
+
+    <%= link_to "Login", root_path, class: "btn btn-primary" %>
+    <%= link_to "Join", root_path, class: "btn btn-secondary" %>
+</section>
