--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<section class="p-5 mt-4 bg-light rounded-3">
+<section class="p-5 mt-4 bg-light rounded-3 center">
     <h1>Welcome to my Pinterested App</h1>
     <p>Pretty cool!</p>
 
