--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,6 +9,12 @@
       <li class="nav-item">
         <%= link_to "About Me", home_about_path, class: "nav-link" %>
       </li>
+      <li>
+        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+      </li>
+      <li>
+        <%= link_to "Join", new_user_registration_path, class: "nav-link" %>
+      </li>
     </ul>
   </div>
 </nav>
