--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,6 @@
     <h1>Welcome to my Pinterested App</h1>
     <p>Pretty cool!</p>
 
-    <%= link_to "Login", root_path, class: "btn btn-primary" %>
-    <%= link_to "Join", root_path, class: "btn btn-secondary" %>
+    <%= link_to "Login", new_user_session_path, class: "btn btn-primary" %>
+    <%= link_to "Join", new_user_registration_path, class: "btn btn-secondary" %>
 </section>
