--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
     <%= render "home/header" %>
 
     <div class="container">
+      <%# For each instance of a Flash, do this  %>
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-danger") %>
+      <% end %>
+
       <%= yield %>
     </div>
   </body>
