--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -13,6 +13,9 @@
         <%= link_to "Login", new_user_session_path, class: "nav-link" %>
       </li>
       <li>
+        <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
+      </li>
+      <li>
         <%= link_to "Join", new_user_registration_path, class: "nav-link" %>
       </li>
     </ul>
