--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,23 +1,30 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <%= link_to "Pinterested", root_path, class: "navbar-brand" %>
 
     <ul class="nav justify-content-end">
       <li>
-       <%= link_to "Home", root_path, class: "nav-link" %>
+        <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
       <li>
         <%= link_to "About Me", home_about_path, class: "nav-link" %>
       </li>
-      <li>
-        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-      </li>
-      <li>
-        <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
-      </li>
-      <li>
-        <%= link_to "Join", new_user_registration_path, class: "nav-link" %>
-      </li>
+      <% if user_signed_in? %>
+        <li>
+          <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to 'Edit Profile', edit_user_registration_path, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to "Join", new_user_registration_path, class: "nav-link" %>
+        </li>
+      <% end %>
     </ul>
+
   </div>
 </nav>
