--- a/app/assets/stylesheets/bootstraply.scss
+++ b/app/assets/stylesheets/bootstraply.scss
@@ -17,3 +17,15 @@ button.nav-link {
 .center {
     text-align: center;
 }
+
+.navbar {
+    margin-bottom: 1rem;
+}
+
+.edit_user {
+    margin-bottom: 2rem;
+}
+
+.button_to {
+    display: inline-block;
+}
