--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="container">
       <%# For each instance of a Flash, do this  %>
       <% flash.each do |name, msg| %>
-        <%= content_tag(:div, msg, class: "alert alert-danger") %>
+        <%= content_tag(:div, msg, class: "alert alert-success") %>
       <% end %>
 
       <%= yield %>
