Adding pins layout styling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
     <% if user_signed_in? %>
         <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
         <%= link_to 'Edit Profile', edit_user_registration_path, class: "btn btn-secondary" %>
+        <%= link_to 'List Pins', pins_path, class: "btn btn-success" %>
     <% else %>
         <%= link_to "Login", new_user_session_path, class: "btn btn-primary" %>
         <%= link_to "Join", new_user_registration_path, class: "btn btn-secondary" %>
