--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -11,6 +11,9 @@
       </li>
       <% if user_signed_in? %>
         <li>
+          <%= link_to 'List Pins', pins_path, class: "nav-link" %>
+        </li>
+        <li>
           <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
         <li>
