--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="form-group">
     <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
