--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -6,5 +6,5 @@
   <%= link_to "Edit this pin", edit_pin_path(@pin) %> |
   <%= link_to "Back to pins", pins_path %>
 
-  <%= button_to "Destroy this pin", @pin, method: :delete %>
+  <%= button_to "Destroy this pin", @pin, method: :delete, class: "btn btn-danger" %>
 </div>
